--- a/pages/about.html
+++ b/pages/about.html
@@ -64,7 +64,7 @@
                         class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium hover:bg-[#28abe3]">Home</a>
                     <a href="/pages/about.html"
                         class="text-black block active px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
-                    <a href="/timestech/pages/services.html"
+                    <a href="/pages/services.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
                     <a href="/timestech/pages/contact.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Contact</a>
@@ -101,7 +101,7 @@
                         U.A.E, Middle East, and U.S. markets. We specialize in a wide range of services including
                         Software Development, Cloud Services, Cybersecurity, and IT Consulting.
                     </p>
-                    <a href="#"
+                    <a href="/timestech/pages/services.html"
                         class="bg-[#28abe3] text-white py-2 px-6 mt-5 rounded-full inline-block hover:bg-[#1c8abf] transition duration-300 text-center">Learn
                         More About Our Services</a>
                 </div>
@@ -186,7 +186,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
                     <div class="bg-white rounded-lg shadow-md p-6">
                         <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Get in Touch</h3>
-                        <form>
+                        <form action="https://formspree.io/f/manywpeq" method="POST">
                             <div class="mb-4">
                                 <label for="name" class="block text-gray-700 font-[Montserrat] mb-2">Name</label>
                                 <input type="text" id="name" name="name"
@@ -215,15 +215,16 @@
                         <ul class="space-y-4">
                             <li class="flex items-center">
                                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">123 Tech Street, Silicon Valley, CA 94000</span>
+                                <span class="font-[Montserrat]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
+                                    388530</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">+1 (555) 123-4567</span>
+                                <span class="font-[Montserrat]">+91 97259 39392</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">info@timestech.com</span>
+                                <span class="font-[Montserrat]">timestechsoftwares@gmai.com</span>
                             </li>
                         </ul>
                         <div class="mt-6 flex justify-center flex-col items-center">
@@ -243,7 +244,7 @@
                 </div>
             </div>
         </section>
-
+        
         <!-- Footer Section -->
         <footer class="bg-gray-800 text-white py-6">
             <div class="mx-auto px-4 sm:px-6 lg:px-8">
@@ -258,7 +259,7 @@
         </footer>
 
     </main>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script type="module" src="../scripts/about.js"></script>
     <script>
