--- a/pages/services.html
+++ b/pages/services.html
@@ -225,6 +225,7 @@
             </div>
         </section>
 
+        
         <section id="contact" class="bg-gray-100 py-16">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-3xl font-bold text-center text-gray-900 mb-8 font-[Montserrat]">Contact Us</h2>
@@ -232,7 +233,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
                     <div class="bg-white rounded-lg shadow-md p-6">
                         <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Get in Touch</h3>
-                        <form>
+                        <form action="https://formspree.io/f/manywpeq" method="POST">
                             <div class="mb-4">
                                 <label for="name" class="block text-gray-700 font-[Montserrat] mb-2">Name</label>
                                 <input type="text" id="name" name="name"
@@ -261,15 +262,15 @@
                         <ul class="space-y-4">
                             <li class="flex items-center">
                                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">123 Tech Street, Silicon Valley, CA 94000</span>
+                                <span class="font-[Montserrat]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">+1 (555) 123-4567</span>
+                                <span class="font-[Montserrat]">+91 97259 39392</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">info@timestech.com</span>
+                                <span class="font-[Montserrat]">timestechsoftwares@gmai.com</span>
                             </li>
                         </ul>
                         <div class="mt-6 flex justify-center flex-col items-center">
