--- a/pages/about.html
+++ b/pages/about.html
@@ -64,7 +64,7 @@
                         class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium hover:bg-[#28abe3]">Home</a>
                     <a href="/pages/about.html"
                         class="text-black block active px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
-                    <a href="/pages/services.html"
+                    <a href="/timestech/pages/services.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
                     <a href="/timestech/pages/contact.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Contact</a>
@@ -77,7 +77,7 @@
             <div class="w-full h-full absolute bg-black opacity-80 flex flex-col items-center justify-center">
                 <h1 class="text-white text-3xl font-bold font-[Montserrat]">About Us</h1>
                 <h1 class="text-white font-[Montserrat] font-medium mt-4 opacity-80">
-                    Home <span class="font-extralight opacity-80">/</span> About Us
+                    <a href="/timestech">Home</a> <span class="font-extralight opacity-80">/</span> <a href="/pages/about.html">About Us</a>
                 </h1>
             </div>
         </div>
@@ -109,6 +109,7 @@
                     <img src="../public/IT_team.jpg" alt="Timestech Team" class="rounded-lg shadow-lg max-w-full">
                 </div>
             </div>
+
         </section>
 
         <section class="py-20 bg-white">
