--- a/pages/contact.html
+++ b/pages/contact.html
@@ -77,7 +77,7 @@
             <div class="w-full h-full absolute bg-black opacity-80 flex flex-col items-center justify-center">
                 <h1 class="text-white text-3xl font-bold font-[Montserrat]">Contact Us</h1>
                 <h1 class="text-white font-[Montserrat] font-medium mt-4 opacity-80">
-                    Home <span class="font-extralight opacity-80">/</span> Contact Us
+                    <a href="/timestech">Home</a> <span class="font-extralight opacity-80">/</span> <a href="">Contact Us</a>
                 </h1>
             </div>
         </div>
