SEO Optimization Added !!!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timestech | Home</title>
+  <meta name="description" content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together.">
+  <meta name="keywords" content="Timestech, IT Solutions, Software Development, Cloud Services, Cybersecurity, IT Consulting">
+  <meta name="author" content="Timestech Team">
+  <meta property="og:title" content="Timestech | Home">
+  <meta property="og:description" content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together.">
+  <meta property="og:image" content="./public/IT_office.jpg">
+  <meta property="og:url" content="https://www.timestech.com">
+  <meta property="og:site_name" content="Timestech">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Timestech | Home">
+  <meta name="twitter:description" content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together.">
+  <meta name="twitter:image" content="./public/IT_office.jpg">
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style" onload="this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"></noscript>
   <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
@@ -268,7 +280,7 @@
               <div class="bg-white rounded-lg shadow-md p-6">
                   <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Contact Information</h3>
                   <ul class="space-y-4">
-                      <li class="flex items-center">
+                      <li class="flex items-center cursor-pointer hover:bg-gray-100 transition duration-300 ease-in-out">
                           <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
                           <span class="font-[Montserrat]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
                       </li>
