--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timestech | About</title>
+    <meta name="description" content="Learn more about Timestech, a leading IT solutions provider. Explore our mission, vision, and values.">
+    <meta name="keywords" content="Timestech, About Us, IT Solutions, Technology, Innovation">
+    <meta name="author" content="Timestech Team">
+    <meta property="og:title" content="Timestech | About">
+    <meta property="og:description" content="Learn more about Timestech, a leading IT solutions provider. Explore our mission, vision, and values.">
+    <meta property="og:image" content="../public/timestech_about.jpg">
+    <meta property="og:url" content="https://www.timestech.com/pages/about.html">
+    <meta property="og:site_name" content="Timestech">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Timestech | About">
+    <meta name="twitter:description" content="Learn more about Timestech, a leading IT solutions provider. Explore our mission, vision, and values.">
+    <meta name="twitter:image" content="../public/timestech_about.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style"
         onload="this.rel='stylesheet'">
     <noscript>
@@ -192,7 +204,7 @@
                                 <label for="name" class="block text-gray-700 font-[Montserrat] mb-2">Name</label>
                                 <input type="text" id="name" name="name"
                                     class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
-                                    required>
+                                    required aria-label="Your Name" placeholder="Enter your name">
                             </div>
                             <div class="mb-4">
                                 <label for="email" class="block text-gray-700 font-[Montserrat] mb-2">Email</label>
