--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timestech | Contact us</title>
+    <title>Timestech | Contact Us</title>
+    <meta name="description" content="Get in touch with Timestech for all your IT solutions and services. Contact us today for more information.">
+    <meta name="keywords" content="Timestech, Contact Us, IT Solutions, Technology, Innovation">
+    <meta name="author" content="Timestech Team">
+    <meta property="og:title" content="Timestech | Contact Us">
+    <meta property="og:description" content="Get in touch with Timestech for all your IT solutions and services. Contact us today for more information.">
+    <meta property="og:image" content="../public/timestech_contact.jpg">
+    <meta property="og:url" content="https://www.timestech.com/pages/contact.html">
+    <meta property="og:site_name" content="Timestech">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Timestech | Contact Us">
+    <meta name="twitter:description" content="Get in touch with Timestech for all your IT solutions and services. Contact us today for more information.">
+    <meta name="twitter:image" content="../public/timestech_contact.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style"
         onload="this.rel='stylesheet'">
     <noscript>
