--- a/pages/services.html
+++ b/pages/services.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timestech | Our Services</title>
+    <meta name="description" content="Explore the comprehensive range of IT services offered by Timestech, a leading technology solutions provider.">
+    <meta name="keywords" content="Timestech, IT Services, Technology Solutions, Software Development, Cybersecurity, Cloud Computing">
+    <meta name="author" content="Timestech Team">
+    <meta property="og:title" content="Timestech | Our Services">
+    <meta property="og:description" content="Explore the comprehensive range of IT services offered by Timestech, a leading technology solutions provider.">
+    <meta property="og:image" content="../public/timestech_services.jpg">
+    <meta property="og:url" content="https://www.timestech.com/pages/services.html">
+    <meta property="og:site_name" content="Timestech">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Timestech | Our Services">
+    <meta name="twitter:description" content="Explore the comprehensive range of IT services offered by Timestech, a leading technology solutions provider.">
+    <meta name="twitter:image" content="../public/timestech_services.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style"
         onload="this.rel='stylesheet'">
     <noscript>
