--- a/pages/contact.html
+++ b/pages/contact.html
@@ -73,13 +73,13 @@
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
                     <a href="/timestech"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium hover:bg-[#28abe3]">Home</a>
+                        class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium">Home</a>
                     <a href="./about.html"
-                        class="text-black block active px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
+                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium">About</a>
                     <a href="./services.html"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
-                    <a href="../pages/contact.html"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Contact</a>
+                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium">Services</a>
+                    <a href="../pages/contact.html" 
+                        class="text-[#28abe3] block active px-3 py-2 uppercase rounded-md text-base font-medium">Contact</a>
                 </div>
             </div>
         </nav>
